--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   },
   "devDependencies": {
     "jest": "^25.1.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
