--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "request-promise": "^4.2.5"
   },
   "devDependencies": {
-    "jest": "^25.1.0"
+    "jest": "^25.1.0",
+    "supertest": "^4.0.2"
   },
   "jest": {
     "testEnvironment": "node",
