--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "http-errors": "~1.6.3",
     "lodash": "^4.17.15",
     "morgan": "~1.9.1",
+    "ramda": "^0.27.0",
+    "ramda-adjunct": "^2.26.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
   },
